I addressed color contrast issues.

--- a/finalproject/styles/projectplan.css
+++ b/finalproject/styles/projectplan.css
@@ -27,7 +27,7 @@ h1 {
     background-color: #4A90E2;
     font-family: 'Times New Roman', Times, serif;
     padding: .3rem;
-    color: #FFFFFF;
+    color: #000;
     margin-bottom: 1rem;
 }
 
